objects/JBCXM__Features__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__Feature__c</fullName>
        <label>Feature</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Product__c</fullName>
        <label>Product</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__SystemName__c</fullName>
        <label>System Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Features</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>JBCXM__Product__c</columns>
        <columns>JBCXM__Feature__c</columns>
        <columns>JBCXM__SystemName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Features Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>